--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
   - hhvm
   
 before_script:
+  - pecl install uopz
   - wget -nc http://getcomposer.org/composer.phar
   - php composer.phar install
 
