--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "minimum-stability": "stable",
     "require-dev": {
-        "phpunit/phpunit": "~4.5"
+        "phpunit/phpunit": "~4.5",
+        "satooshi/php-coveralls": "dev-master"
     }
 }
